--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Databases showcase</string>
     <string name="hint_task_title">Title</string>
     <string name="hint_task_description">Description</string>
+    <string name="task_details_screen_title">Task details</string>
 </resources>
